--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ section {
 .masthead{
     padding-top: 10rem;
     padding-bottom: calc(10rem - 56px); 
-    background-image: url(file:///C:/Users/Linh%20Tib/Desktop/final%20project/img/header.jpg);
+    background-image: url(header.jpg);
     background-position: top center;
     background-size: cover;
 }
